--- a/app/index.html
+++ b/app/index.html
@@ -32,9 +32,9 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#view1">About</a></li>
-            <li><a href="#view2">Contact</a></li>
+            <li ><a href="#home">Home</a></li>
+            <li><a href="#about" >About</a></li>
+            <li><a >Contact</a></li>
           </ul>
 
        <ul class="nav navbar-nav navbar-right">
@@ -59,15 +59,15 @@
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
   <script src="bower_components/angular/angular.js"></script>
   <script src="bower_components/angular-route/angular-route.js"></script>
+  
   <script src="js/app.js"></script>
-  <script src="js/services.js"></script>
-  <script src="js/controllers.js"></script>
   <script src="js/data.js"></script>
+
     <script src="js/login/LoginCtrl.js"></script>
     <script src="js/login/LoginSvc.js"></script>
 
-      <script src="js/car/AddCarCtrl.js"></script>
-    <script src="js/car/AddCarSvc.js"></script>
+      <script src="js/cars/CarCtrl.js"></script>
+    <script src="js/cars/CarSvc.js"></script>
 
   <script src="js/filters.js"></script>
   <script src="js/directives.js"></script>
