--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
 
     <div class="container">
 
-      <div class="starter-template" ng-view >
+      <div class="starter-template" ui-view  >
        
       </div>
 
@@ -58,7 +58,7 @@
  <script src="bower_components/jquery/dist/jquery.js"></script>
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
   <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-route/angular-route.js"></script>
+  <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
   
   <script src="js/app.js"></script>
   <script src="js/data.js"></script>
