--- a/app/index.html
+++ b/app/index.html
@@ -32,8 +32,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li ><a href="#home">Home</a></li>
-            <li><a href="#about" >About</a></li>
+            <li ><a ui-sref="home">Home</a></li>
+            <li><a ui-sref="about" >About</a></li>
             <li><a >Contact</a></li>
           </ul>
 
