--- a/app/index.html
+++ b/app/index.html
@@ -20,25 +20,9 @@
 </head>
 
 <body ng-app="myApp">
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                </button>
-                <a class="navbar-brand" ui-sref="login">Teloran</a>
-            </div>
-            <div id="navbar" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li><a ui-sref="home">Home</a></li>
-                    <li><a ui-sref="about">About</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a ui-sref="login">Log Out</a></li>
-                </ul>
-            </div>
-            <!--/.nav-collapse -->
-        </div>
-    </nav>
+    <div ng-controller="NavBarCtrl">
+        <div dn-navi-bar ></div>
+   </div>
     <div class="container">
         <div class="starter-template" ui-view>
         </div>
@@ -59,6 +43,11 @@
     <script src="js/cars/CarOps.js"></script>
     <script src="js/survey/CarMakeSurvey.js"></script>
     <script src="js/survey/SurveyOps.js"></script>
+
+    <script src="js/navibar/NaviBarCtrl.js"></script>
+    <script src="js/navibar/NaviBar.js"></script>
+
+    
     <script src="js/filters.js"></script>
 </body>
 
