--- a/app/js/navibar/navi-bar.html
+++ b/app/js/navibar/navi-bar.html
@@ -12,7 +12,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a ui-sref="login">Log Out</a></li>
-                      <li><a href="#">{{userName}}</a></li>
+                      <li><a href="#">{{identity.username}}</a></li>
                 
                 </ul>
             </div>
