--- a/app/js/survey/car-make-survey.html
+++ b/app/js/survey/car-make-survey.html
@@ -1,5 +1,5 @@
 <ul class="list-inline">
-    <li ng-repeat="make in makeList"><b>{{make.name}}</b>
+    <li ng-repeat="make in makeList"><p>{{make.name}}</p>
        <dn-survey-ops make ="make" />
     </li>
 </ul>
