--- a/app/index.html
+++ b/app/index.html
@@ -25,20 +25,17 @@
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar">test</span>
           </button>
           <a class="navbar-brand" href="#login">Teloran</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li ><a href="#home">Home</a></li>
-            <li><a href="#about" >About</a></li>
-            <li><a >Contact</a></li>
+            <li ><a ui-sref="home">Home</a></li>
+            <li><a ui-sref="about" >About</a></li>
           </ul>
 
        <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Log Out</a></li>
+        <li><a ui-sref="login">Log Out</a></li>
         </ul>
         </div><!--/.nav-collapse -->
 
@@ -70,6 +67,5 @@
     <script src="js/cars/CarSvc.js"></script>
 
   <script src="js/filters.js"></script>
-  <script src="js/directives.js"></script>
 </body>
 </html>
